--- a/src/sass/Login/_login.scss
+++ b/src/sass/Login/_login.scss
@@ -26,6 +26,7 @@
         padding: 7rem 4rem;
      }
      @include m.telefonom {
+        scale: .9;
         height: 46rem;
         padding: 6rem 4rem;
      }
