--- a/src/sass/company/_modalcompany.scss
+++ b/src/sass/company/_modalcompany.scss
@@ -12,7 +12,7 @@
     justify-content: center;
     align-items: center;
     align-content: center;
-    display: none;
+    // display: none;
     &__content{
         width: 46rem;
         height: 35rem;
@@ -21,7 +21,11 @@
         border-radius: 1rem;
         display: flex;
         flex-direction: column;
-       
+        
+        @include m.telefonoFull {
+            width: 91.5%;
+           margin-top: 25vh;
+        }
     }
     &__title{
      
@@ -41,6 +45,10 @@
         align-items: center;
         color: #071435;
         gap: 1rem;
+        @include m.telefono {
+
+            padding: 2rem 1rem;
+        }
 
     }
     &__input{
@@ -50,7 +58,8 @@
        outline:  .1rem solid #CFD5E6;
        margin-bottom: 1rem;
        padding-left: 2rem;
-     
+   
+    
     }
  
     &__btn{
@@ -68,6 +77,7 @@
         gap: 1rem;
         font-size: 1.4rem;
         cursor: pointer;
+        
         &--bg{
             width: 70%;
             background-color: #6B7286;
@@ -75,12 +85,16 @@
         &:hover{
             opacity: .9;
         }
+        @include m.telefono {
+            font-size: 1.2rem;
+        }
     }
     &__content-buttons{
         margin-top: 3rem;
         width: 100%;
         display: flex;
         gap: 1rem;
+     
         
     }
 }
