--- a/src/sass/dashboard/_filters.scss
+++ b/src/sass/dashboard/_filters.scss
@@ -34,6 +34,9 @@
        
         overflow: hidden;
     }
+    @include m.tabletM {
+        display: none;
+    }
     @include m.telefonoFull {
         display: none;
     }
