--- a/src/sass/globales/_global.scss
+++ b/src/sass/globales/_global.scss
@@ -39,7 +39,7 @@ html {
      min-height: auto;
      background: var(--background-Color);
      color: white;
-    //  overflow: hidden;
+     overflow: hidden;
    
     
   }
