--- a/src/sass/start/_modal-Registro.scss
+++ b/src/sass/start/_modal-Registro.scss
@@ -19,7 +19,10 @@
      
   }
 
-
+  @include m.tabletM {
+    width: 130%;
+    scale: .75;
+  }
     @include m.telefonoFull {
       height: auto;
     }
