--- a/src/sass/start/_tablestart.scss
+++ b/src/sass/start/_tablestart.scss
@@ -1,14 +1,28 @@
 @use '../globales/mixins' as m;
 
 #myTable_wrapper{
-    width: 100%;
-    height: 80vh;
-    overflow-y: scroll;
-    overflow-x: hidden;
-    ;
+    width: 98.5%;
+
+    height: auto;
+    margin: 1rem;
+  
+ 
+   overflow: scroll;
+        scrollbar-color: #000 transparent ;
+        
+         scrollbar-width:thin; 
     
-     scrollbar-width:thin; 
+    
     @include m.desktopFull {
         height: 100%;
     }
+}
+#myTable{
+   
+   
+    overflow-y: scroll;
+    scrollbar-color: #000 transparent ;
+    
+     scrollbar-width:thin; 
+
 }
