--- a/src/sass/start/_sidemenu.scss
+++ b/src/sass/start/_sidemenu.scss
@@ -1,13 +1,17 @@
 @use '../globales/mixins' as m;
 @use '../globales/global';
 .menu{
+    
     width: 100%;
     height: 100vh;
     display: flex;
     
-    overflow: hidden;
+    // overflow: hidden;
+    @include m.tabletM {
+        flex-direction: column
+    }
     @include m.telefonoFull {
-       
+        width: 100%;
         flex-direction: column;
         height: auto;
         padding: 0;
@@ -139,6 +143,9 @@
        cursor: pointer;
         transition: transform 0.3s ease-in-out;
         z-index: 1;
+       @include m.tabletM {
+        display: none
+       }
        &:hover{
           transform: scale(1.03);
        }
@@ -150,7 +157,22 @@
         justify-content: center;
         align-content: center;
         gap: 2rem;
-       
+       @include m.tabletM {
+        display: block;
+        position: fixed;
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+        top: 0;
+        width: 60%;
+        height: 100vh;
+        transition: transform .4s;
+        transform: translateX(-110%);
+        background-color: blue;
+        z-index: 9;
+        padding-right: 1rem;
+        padding-left: 2rem
+       }
         @include m.telefonoFull {
             display: block;
             position: fixed;
@@ -264,7 +286,10 @@
        flex-direction: column;
        align-items: center;
        gap: 2rem; 
-        @include m.telefonoFull {
+       @include m.tabletM {
+       display: none;
+       }
+       @include m.telefonoFull {
             display: none
         };
     }
@@ -365,6 +390,14 @@ display: none;
 
 .close-hamburger{
     display: none;
+    @include m.tabletM {
+        cursor: pointer;
+        display: block;
+        margin-top: 1.5rem;
+        
+        align-self: flex-end;
+       
+    }
     @include m.telefonoFull {
         cursor: pointer;
         display: block;
