--- a/src/sass/start/_sidemenu.scss
+++ b/src/sass/start/_sidemenu.scss
@@ -103,6 +103,10 @@
     }
     &__icon-hamburger{
         display: none;
+        @include m.tabletM {
+            display: block;
+            cursor: pointer;
+        }
         @include m.telefonoFull {
             display: block;
             cursor: pointer;
