--- a/src/sass/company/_modalcompany.scss
+++ b/src/sass/company/_modalcompany.scss
@@ -12,7 +12,7 @@
     justify-content: center;
     align-items: center;
     align-content: center;
-    // display: none;
+    display: none;
     &__content{
         width: 46rem;
         height: 35rem;
