--- a/src/sass/company/_table.scss
+++ b/src/sass/company/_table.scss
@@ -3,8 +3,10 @@
 
 
 .content-table{
+    // overflow: hidden;
+    // height: auto;
     overflow: hidden;
-    height: auto;
+    // scale: .9;
     // outline: 1px solid red;
 
     &__header-Company{
