--- a/src/sass/start/_combos.scss
+++ b/src/sass/start/_combos.scss
@@ -20,20 +20,47 @@
   
   }
 }
+// #selectE{
+//   background-color: #f7fafb;
+//   padding: 0.7rem 20px;
+//   color: #6b7286;
+//   outline: 1px solid #cfd5e6;
+//   font-weight: 500;
+//   font-size: 1.4rem;
+//   border-radius: 5px; 
+//   display: flex;
+//   align-items: center;
+//   justify-content: space-between;
 
+//   @include m.desktopFull {
+//     padding: 0.8rem 0.6rem;
+//     font-size: 1rem;
+//   }
+
+//   @include m.telefonoFull{
+  
+//   }
+// }
 .options-list {
   position: absolute;
-  width: 200px;
+  width: 20rem;
   background-color: #f7fafb;
   border-radius: 6px;
   margin-top: 1px;
   padding: 0 20px;
   max-height: 80px;
-
   overflow-y: auto;
   transition: 0.1s linear 0.1s;
   height: 0;
   box-shadow: 0 6px 12px rgba(58, 58, 58, 0.15);
+  @include m.desktopFullHD {
+   
+    width: 18rem;
+  }
+  // @include m.desktopFull {
+  //   background-color: red;
+  //   width: 10rem;
+  // }
 }
 
 .option {
@@ -56,10 +83,24 @@
 .options-list::-webkit-scrollbar-thumb {
   background-color: #00a8ff;
 }
-
+// ACTIVE
 .options-list.active {
   height: 180px;
 }
+
+.options-listE.active {
+  height: 180px;
+}
+
+
+
+// 
+.options-listA.active {
+  height: 180px;
+}
+
+
+
 
 :is(.modal__combo-company, .modal__combo-area, .modal__combo-regime) {
   display: flex;
