--- a/src/sass/start/_tablestart.scss
+++ b/src/sass/start/_tablestart.scss
@@ -1,28 +1,108 @@
 @use '../globales/mixins' as m;
 
-#myTable_wrapper{
-    width: 98.5%;
+.container {
+   width: 100%;
 
-    height: auto;
-    margin: 1rem;
+ font-size: 1.2rem;
+&__header{
   
- 
-   overflow: scroll;
-        scrollbar-color: #000 transparent ;
-        
-         scrollbar-width:thin; 
-    
-    
-    @include m.desktopFull {
-        height: 100%;
-    }
-}
-#myTable{
-   
-   
-    overflow-y: scroll;
-    scrollbar-color: #000 transparent ;
-    
-     scrollbar-width:thin; 
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 2rem;
+    padding:  2rem;
 
 }
+  }
+  
+//   .select-menu, .pagination-options, .filter-section {
+//     margin-bottom: 20px;
+//   }
+  
+  #dataTable {
+    display: block;
+
+    height: 38rem;
+    height: 90%;
+    width: 100%;
+    // margin: -1rem;
+    border-collapse: collapse;
+    margin-top: 0.3rem;
+    overflow-y: scroll;
+    overflow-x: scroll;
+    scrollbar-color: #bd1616 transparent ;
+        
+    scrollbar-width:none; 
+    
+  }
+  
+  #dataTable th, #dataTable td {
+    border: 1px solid #ddd;
+    padding: 8px;
+  }
+  #dataTable{
+    padding: 0;
+   
+  }
+  
+  #dataTable th {
+    background-color: #f2f2f2;
+    text-align: left;
+    color: #0C2B82;
+  }
+ 
+//   #search {
+//     padding: 10px;
+//     width: 300px;
+//     border-radius: 4px;
+//     border: 1px solid #ccc;
+//   }
+#searchdatastart{
+    display: block;
+    width: 40rem;
+    @include m.desktopFullHD {
+        all: unset;
+        width: 35rem; 
+        height: 4rem;
+        padding: 0.6rem;
+        border-radius: .7rem;
+        border: .1rem solid #CFD5E6;
+    }
+}  
+.filter-section{
+    padding: 0;
+    margin: 0;
+}
+  .pagination-controls {
+    margin-top: 20px;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+  }
+  
+  button {
+    padding: 5px 10px;
+    border: 1px solid #ddd;
+    background-color: #f2f2f2;
+    cursor: pointer;
+  }
+  
+  button:disabled {
+    background-color: #e0e0e0;
+    cursor: not-allowed;
+  }
+  #dataTable td{
+    color: #071435;
+  }
+
+  .pagination-controls{
+    display: flex;
+    justify-content: flex-end;
+    padding: 0 2rem;
+  }
+  [data-key="guardia"] {
+    
+    width: 2rem!important;
+    background-color: #70C9EF;
+    padding: 4rem;
+  }
