--- a/src/sass/start/_sidemenu.scss
+++ b/src/sass/start/_sidemenu.scss
@@ -377,7 +377,7 @@ display: none;
 
 #contraer:checked + .menu__figure{
     max-width: 3rem;
-     --imgicon-Lateral:url(../../../Assets/iconos-Logo/NEM-9b518837.png);
+     --imgicon-Lateral:url(../../../Assets/iconos/newmontlogo.svg);
 }
 #contraer:not(:checked) + .menu__figure{
    
