--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -3,4 +3,6 @@
 @use 'start/index2';
 @use 'modalsResult/index3';
 @use  'company/index4';
-@use 'dashboard/index6'
+@use 'dashboard/index6';
+@use 'Areas/areas.scss';
+@use './Regimenes/index8.scss'
