--- a/src/sass/dashboard/_filters.scss
+++ b/src/sass/dashboard/_filters.scss
@@ -1,38 +1,47 @@
 @use '../globales/mixins' as m;
 .filters{
     width: 27.7rem;
-    height: 100%;
-
+    height: 98%;
     color: #071435;
     border-radius: .8rem;
     border: 1px solid #CFD5E6;
     background-color: white;
     margin-left: 2rem;
-   
+ 
     @include m.desktopFullHD {
        
-        height: 84.5%;
+        height: 98%;
         overflow-y: scroll;
         overflow-x: hidden;
         scrollbar-color:    #445C9E #0C2B82;
          scrollbar-width:thin;
-         
+         padding-bottom: 1rem;
     }
-    @include m.desktopFull {
-        width: 23rem;
-        border-radius: 0;
-        border-top-left-radius: .8rem;
-        border-bottom-left-radius: .8rem;
+    // @include m.desktopFull {
         
-    }
+    //     width: 23rem;
+    //     height: 40%;
+    //     border-radius: 0;
+    //     border-top-left-radius: .8rem;
+    //     border-bottom-left-radius: .8rem;
+        
+    // }
+    @include m.desktopFull {
+        height: 84.5%;
+      }
+      @media(max-width:1365px) and (max-height:1300px){
+       
+        height: 98%;
+      }
     @include m.desktopMediun {
         width: 95.5%;
-        height: 63%;
+        height: 40%;
         max-height: 100%;
-        
+        overflow-y: scroll;
+        overflow-x: hidden;
         border-radius: .8rem;
        
-        overflow: hidden;
+       
     }
     @include m.tabletM {
         display: none;
@@ -54,8 +63,11 @@
         }
     }
     &__arrow{
+        display: none;
         cursor: pointer;
-       
+       @include m.desktopMediun {
+        display: block;
+       }
     }
     &__contentAll{
         // display: flex;
@@ -89,7 +101,7 @@
             
         }
         @include m.desktopFull {
-            gap: 1.6rem;
+            gap: 1rem;
           
         }
        
@@ -128,7 +140,7 @@
      transition: max-height 1s ease, visibility 0s;
  }
 .filters:has(#filtersHidden:checked){
-   
-    height: 6.5rem;
+
+    height: 5rem;
    
 }
