--- a/src/sass/dashboard/_tabOptions.scss
+++ b/src/sass/dashboard/_tabOptions.scss
@@ -1,17 +1,39 @@
   @use '../globales/mixins' as m;
 .tabs {
     width: 100%;
-    height: 100%;
+    height: 98%;
     border-radius: 8px;
     background-color: #fff;
     border: .1rem solid #CFD5E6;
     margin-right: 2rem;
+    color: black;
+ 
+    height: calc(100% - 2rem);
+    // height: 98%;
+     padding-bottom: 1rem;
     @include m.desktopFullHD {
+ 
+     height: 98%;
+    }
+    @include m.desktopFull {
+      
       height: 84.5%;
     }
+
+
+    @media(max-width:1365px) and (max-height:1300px){
+      
+      height: 98%;
+    }
     @include m.desktopMediun {
+      overflow-y: scroll;
+      overflow-x: hidden;
+      scrollbar-color:    #445C9E #0C2B82;
+       scrollbar-width:thin;
      width: 95.5%;
+  
      margin: 0 auto;
+     margin-bottom: 2rem;
       
     }
   }
@@ -20,8 +42,11 @@
     display: flex;
     justify-content: space-between;
     padding: 1rem 1rem;
-    
+ 
     border-bottom: 1px solid #ccc;
+    @include m.desktopMediun {
+      padding: 0.5rem;
+    }
     @include m.telefonoFull {
       overflow: hidden;
     }
@@ -61,7 +86,7 @@
   }
   
   .tab-content {
-    height: 60%;
+    height: 58%;
     padding: 20px;
     background-color: white;
     // border-radius: 8px;
@@ -70,8 +95,9 @@
     justify-content: center;
     align-items: center;
     border-bottom: .1rem solid #CFD5E6;
+    
     @include m.desktopFullHD {
-      height: 56%;
+      height: 46%;
     }
     @include m.desktopMediun {
       height: 54.5%;
