--- a/src/sass/dashboard/_tabledash.scss
+++ b/src/sass/dashboard/_tabledash.scss
@@ -1,7 +1,25 @@
+@use '../globales/mixins' as m;
+.container-tabledashboard{
+    width:100%;
+    height: 22.1%;
+    overflow-y: scroll;
+    scrollbar-width: none;;
+    @include m.desktopFullHD {
+   
+  
+    }
+    @include m.desktopMediun {
+        height: 30.1%;
+    }
+    
+}
+
 .datable-dash{
     width: 100%;
+    height:100%;
     border-collapse: collapse;
-   
+        // background-color: red;
+        overflow-y: scroll;
    &__head{
     background-color: #F7FAFB;
     color: #0C2B82;
@@ -12,13 +30,29 @@
 //    
 }
 
-table, th, td {
-    border: 1px solid #CFD5E6;
+.datable-dash th{
+    border-right: 1px solid #CFD5E6;
+    border-bottom: 1px solid #CFD5E6;
+}
+.datable-dash th:last-child{
+    border-right: none;
+}
+
+.datable-dash tr:nth-child(-n+100) td {
+    border-right: 1px solid #CFD5E6;
+    border-bottom: 1px solid #CFD5E6;
+  }
+  
+
+.datable-dash, th, td {
+    // border: 1px solid #CFD5E6;
     text-align: left;
     padding: 8px;
     
 }
-
+.datable-dash{
+    max-height: 85px; 
+}
 
 select {
     padding: 6px;
@@ -35,6 +69,7 @@ select {
 .comboActions{
     border-top: 0.1rem solid #CFD5E6;
     padding: 2rem;
+    border-bottom: 1px solid #CFD5E6;
     &--width{
         width: 20rem;
         color: black;
