--- a/src/sass/globales/_mixins.scss
+++ b/src/sass/globales/_mixins.scss
@@ -84,6 +84,12 @@
     }
   }
   
+
+  @mixin desktopFullm {
+    @media (max-width: v.$desktop-full-m) {
+      @content;
+    }
+  }
   // boton
   @mixin btn-style($border-radius: .5rem, $background-color: #0C2B82) {
     all: unset;
@@ -101,7 +107,11 @@
   
     background-color: $background-color; // Background-color como parámetro
     color: white;
-  
+    @include desktopFull() {
+      width: 19rem;
+      padding: 0.8rem 1rem;
+      font-size: 1.5rem;
+    }
     @include telefonoFull {
       width: auto;   
       min-width: 10rem;
@@ -126,6 +136,10 @@
     padding: 0.5rem 2rem 0.5rem 5rem; // Mantén el padding fijo si no necesitas cambiarlo
     outline: .1rem solid #CFD5E6;
     cursor: auto;
+    @include desktopFull() {
+      width: 34rem;
+      height: 3.7rem;
+    }
     @include telefonoFull {
         width: 100%;
         min-width: 8rem;
