--- a/src/sass/globales/_variables.scss
+++ b/src/sass/globales/_variables.scss
@@ -1,8 +1,8 @@
 // Puntos de quiebre en un enfoque desktop-first
 $desktop: 1024px;          // Desktops
 $desktop-full: 1366px;     // Large desktops
+$desktop-full-m: 1450px;
 $desktop-ultra-hd: 1550px; // Ultra HD desktops
-
 $tablet-medium: 900px;     // Medium tablets
 $tablet-extra-large: 810px; // Extra-large tablets
 $tablet: 768px;            // Tablets
