--- a/src/sass/start/_tablestart.scss
+++ b/src/sass/start/_tablestart.scss
@@ -2,8 +2,14 @@
 
 .container {
    width: 100%;
-
- font-size: 1.2rem;
+  height: 100%;
+ font-size: 1.4rem;
+ @include m.desktopFullHD {
+  font-size: 1.3rem;
+ }
+ @include m.desktopFull {
+  font-size: 1.2rem;
+ }
 &__header{
   
     display: flex;
@@ -11,42 +17,124 @@
     align-items: center;
     gap: 2rem;
     padding:  2rem;
+   border-bottom: 1px solid #CFD5E6;
+  
 
 }
-  }
+&__header-actions{
+  width: 20rem;
   
-//   .select-menu, .pagination-options, .filter-section {
+}
+  }
+.pagination-options{
+  display: flex;
+  gap: 2rem;
+  justify-content: center;
+  align-items: center;
+}
+
+#numRecords{
+  outline: none;
+  padding: 0.5rem 2rem;
+  background-color: #F7FAFB;
+  border-radius: .5rem;
+  border: .1rem solid #CFD5E6;
+}
+
+  //   .select-menu, .pagination-options, .filter-section {
 //     margin-bottom: 20px;
 //   }
   
   #dataTable {
     display: block;
-
-    height: 38rem;
-    height: 90%;
-    width: 100%;
-    // margin: -1rem;
     border-collapse: collapse;
-    margin-top: 0.3rem;
+   
+    width: 100%;
+    table-layout: 200%;
+  
+    height: 98%;
+    // margin-top: 0.3rem;
     overflow-y: scroll;
     overflow-x: scroll;
     scrollbar-color: #bd1616 transparent ;
         
     scrollbar-width:none; 
+    @include m.desktopFullHD {
+      // height: 38rem;
+      height: 96%;
+      width: 100%;
+    }
+    @include m.desktopFull {
+      height: 90%;
+      width: 100%;
+    }
+   
+    // margin: -1rem;
+   
     
   }
   
-  #dataTable th, #dataTable td {
-    border: 1px solid #ddd;
-    padding: 8px;
-  }
+/* Aplicar el borde superior e inferior a todos los th y td por defecto */
+/* Aplicar el borde superior, inferior y derecho a todos los th y td por defecto */
+#dataTable th {
+  border-bottom: 1px solid #CFD5E6;
+
+  border-right: 1px solid #CFD5E6;
+  padding: 8px;
+  color: #071435;
+}
+#dataTable td{
+  border-bottom: 1px solid #CFD5E6;
+  border-top: 1px solid #CFD5E6;
+  border-right: 1px solid #CFD5E6;
+  padding: 8px;
+  font-weight: 500;
+  color: #071435;
+}
+/* Eliminar el borde izquierdo del primer td en la primera fila */
+#dataTable tr:first-child td:first-child {
+  border-left: none;
+}
+
+/* Eliminar el borde derecho del último td en la última fila */
+#dataTable tr:last-child td:last-child {
+border-bottom: 0;
+  border-right: none;
+}
+
+#dataTable tr:last-child td:nth-child(-n+100) {
+  border-bottom: none;
+ 
+}
+
+/* Eliminar el borde izquierdo del primer th en la primera fila (si necesitas aplicarlo a los encabezados también) */
+#dataTable tr:first-child th:first-child {
+  border-left: none;
+}
+
+/* Eliminar el borde derecho del último th en la última fila (si necesitas aplicarlo a los encabezados también) */
+#dataTable tr:last-child th:last-child {
+  border-right: none;
+}
+#dataTable tr:last-child td:last-child {
+  border-right: none;
+}
+#dataTable tr:nth-child(-n+100) td:last-child {
+  border-right: none;
+}
+/* Establecer el ancho para la primera columna */
+#dataTable td:first-child, #dataTable th:first-child {
+  text-align: center;
+  width: 82px; /* Ajusta el valor según el tamaño deseado */
+}
+
   #dataTable{
     padding: 0;
    
   }
   
   #dataTable th {
-    background-color: #f2f2f2;
+    background-color: #F7FAFB;
     text-align: left;
     color: #0C2B82;
   }
@@ -58,15 +146,16 @@
 //     border: 1px solid #ccc;
 //   }
 #searchdatastart{
+    all: unset;
     display: block;
     width: 40rem;
+    height: 4rem; 
+    border: .1rem solid #CFD5E6;
+    border-radius: .7rem;
+    padding: 0.6rem;
     @include m.desktopFullHD {
-        all: unset;
         width: 35rem; 
         height: 4rem;
-        padding: 0.6rem;
-        border-radius: .7rem;
-        border: .1rem solid #CFD5E6;
     }
 }  
 .filter-section{
@@ -74,7 +163,10 @@
     margin: 0;
 }
   .pagination-controls {
-    margin-top: 20px;
+    height: 7rem;
+    
+    border-top: 1px solid #CFD5E6;
+    // margin-top: 20px;
     display: flex;
     align-items: center;
     gap: 10px;
@@ -83,6 +175,7 @@
   button {
     all: unset;
     padding: 5px 10px;
+   
     // border: 1px solid #ddd;
     // background-color: #f2f2f2;
     cursor: pointer;
@@ -93,6 +186,7 @@
     cursor: not-allowed;
   }
   #dataTable td{
+    
     color: #071435;
   }
 
@@ -101,9 +195,47 @@
     justify-content: flex-end;
     padding: 0 2rem;
   }
-  [data-key="guardia"] {
-    
-    width: 2rem!important;
-    background-color: #70C9EF;
-    padding: 4rem;
+
+  #pageInput{
+    all: unset;
+    display: block;
+    width: 7rem!important;
+   padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+    padding-left: 1rem;
+    text-align: center!important;
+    background-color: #F7FAFB;
+    border-radius: .5rem;
+    border: .1rem solid #CFD5E6;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
+  
+  [data-key="guardia"] {
+      position: relative;
+
+    // background-color: #70C9EF;
+ 
+  }
+  
+
+  .btn-si,.btn-no {
+    width: 6rem;
+    text-align: center;
+    border-radius: .6rem
+  }
+
+  .btn-si{
+    border: 1px solid #70C9EF;
+    background-color: #E7F6FC;
+    color: #12A6E6;
+    ;
+  }
+  
+  .btn-no {
+    border: 1px solid #FD9D74;
+    background-color: #FFEEE8;
+    color: #FC6917;
+  }
+  
